# cli.tar

./: .bazelrc  .editorconfig  .gitignore  BUILD.bazel  README.md  WORKSPACE  go.mod
cmd/tar/: BUILD.bazel  tar.go
rules/: BUILD.bazel  cmp_tar.sh  file_size.sh  file_size_tpl.sh  rules.bzl
