load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "tar",
    embed = [":tar_lib"],
    visibility = ["//rules:__pkg__"],
)

go_library(
    name = "tar_lib",
    srcs = ["tar.go"],
    importpath = "github.com/siberex/cli.tar/cmd/tar",
    visibility = ["//visibility:private"],
)
